syntax = "proto3";

// protobuf生成的java代码 一个源文件还是多个源文件
option java_multiple_files = false;
// 指定protobuf生成的类
option java_package = "com.tk";
// 指定的protobuf生成的外部类的名字（管理内部类【内部类才是真正开发使用】）
option java_outer_classname = "HelloProto";


message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

message HelloRepeatRequestt{
  repeated string name  =1;
}


service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);

  rpc helloRepeat(HelloRepeatRequestt) returns (HelloResponse);

  // 服务端流式RPC
  rpc c2ss(HelloRequest) returns (stream HelloResponse);

  rpc bothWaySend(stream HelloRequest) returns (stream HelloResponse);
}